--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.2", 
     "qr-image": "^3.2.0"
+  },
+  {
+    "scripts": {
+      "start": "node index.js"
+    }
   }
 }
